public/assets/css/dashboard.css
/* Main */
main {
    display: grid;
    grid-template-areas:
        "nav nav"
        "aside main"
        "footer footer";
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 250px 1fr;
}
body {
    background-color: var(--bg-color);
    color: var(--black-color);
}
/* header */
.container {
    width: 100%;
    margin: 0 auto;
    padding: 0 2rem 4rem 2rem;
}
.header {
    border-bottom: 1px solid var(--line-color);
    background-color: var(--white-color);
}
.header__box {
    max-width: 188rem;
    margin: 0 auto;
    padding: 3.2rem 2rem;
    justify-content: space-between;
}

.header__icon {
    color: var(--black-color);
    width: 3rem;
    height: 3rem;
}
.user__images {
    cursor: pointer;
}
.settings__icons,
.user__images {
    gap: 2rem;
}
.cta__box {
    gap: 2rem;
}

.link__account:link,
.link__account:visited {
    color: #e6290a;
    text-decoration: none;
    padding: 1rem;
    display: flex;
}
hr {
    margin-top: 1rem;
    margin-bottom: 1rem;
    background-color: gray;
    border: 1px solid var(--line-color);
}
.name__screen__sm {
    padding: 1rem;
}
.account__dropdown {
    padding: 2rem;
    background-color: var(--white-color);
    box-shadow: 0px 4px 9px 0px rgba(95, 95, 95, 0.1);
    border-radius: 1rem;
    position: absolute;
    top: 8rem;
    right: 2rem;
    opacity: 0;
    transition: all 0.5s ease;
    z-index: 1;
    visibility: hidden;
}
.account__dropdown.show {
    opacity: 1;
    top: 10rem;
    visibility: visible;
}
.menu {
    display: none;
    width: 2rem;
    height: 2rem;
    padding: 2rem;
    cursor: pointer;
}
.header__icon {
    transition: all 0.5s ease;
    cursor: pointer;
}
.notification__container {
    padding: 3rem;
    background-color: var(--white-color);
    box-shadow: 0px 4px 9px 0px rgba(95, 95, 95, 0.1);
    border-radius: 1rem;
    position: absolute;

    z-index: 1;
    right: 27rem;
    top: -2rem;
    transition: all 0.5s ease;
    visibility: hidden;
    opacity: 0;
}

.notification__container.show {
    visibility: visible;
    opacity: 1;

    top: 10rem;
}
.notif__text__description {
    font-size: 1.4rem;
    color: var(--black-color);
    font-weight: 500;
    color: var(--gray-text-color);
}
.notification__heading {
    margin-bottom: 2rem;
}
.btn__read {
    padding: 1.5rem 0;
    border: none;
    font-weight: 600;
    font-family: "poppins", sans-serif;
    border-radius: 1rem;
    background-color: var(--light-green-color);
    transition: all 0.5s ease;
    cursor: pointer;
    display: flex;
    width: 100%;
    justify-content: center;
    margin-top: 3rem;
}
.btn__read:hover {
    background-color: var(--green-color);
    color: var(--white-color);
}
.notif__heading {
    font-size: 1.5rem;
    font-weight: 600;
}
.notif__title .text__description {
    font-size: 1.3rem;
    color: var(--gray-text-color);
}
.pending__box {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    height: 30rem;
    overflow-y: scroll;
    padding: 0 2rem 0 0;
}
.pending__box::-webkit-scrollbar {
    width: 0.5rem; /* Width of the scrollbar */
}

.pending__box::-webkit-scrollbar-thumb {
    background-color: var(--green-color); /* Default thumb color */
    border-radius: 4px; /* Rounded corners */
    padding: 1rem;
}

.pending__box::-webkit-scrollbar-thumb:hover {
    background-color: var(--green-color);
    padding: 1rem;
}

.pending__box::-webkit-scrollbar-track {
    background-color: #f1f1f1; /* Background of the scrollbar track */
    padding: 1rem;
}
.green__circle {
    width: 1rem;
    height: 1rem;
    background-color: var(--green-color);
    border-radius: 50%;
    display: block;
}
.pending__notif {
    display: flex;
    gap: 2rem;
    cursor: pointer;
    padding: 1rem;
    border-radius: 1rem;
    transition: all 0.5s ease;
}
.pending__notif:hover {
    background-color: var(--light-green-color);
}
.icon__notification:hover {
    color: #e33b59;
}
.notification__count {
    position: absolute;
    top: -0.5rem;
    right: -2rem;
    padding: 0.5rem;
    border-radius: 50%;
    background-color: #e33b59;
    transform: translate(-50%, -50%);
    font-size: 1rem;
    font-weight: 600;
    color: var(--white-color);
}

/* Logo */
.logo {
    width: 23rem;
    height: 5rem;
}

.user__name {
    color: var(--black-color);
    font-weight: 500;
}
/* Navigation */
.navigation {
    box-shadow: 0px 4px 9px 0px rgba(95, 95, 95, 0.1);
    grid-area: nav;
    background-color: var(--white-color);
}
.nav__items {
    max-width: 188rem;
    margin: 0 auto;
    list-style: none;
    /* gap: var(--gap-large); */
}

.nav__item {
    display: flex;
    position: relative;
    align-items: center;
    gap: 1rem;
    font-size: 1.6rem;
    color: var(--black-color);
    cursor: pointer;
    padding: 2rem;
}

.dropdown {
    opacity: 0;
    position: absolute;
    top: 60%;
    left: 0;
    background-color: var(--white-color);
    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.1);
    list-style: none;
    padding: 1rem;
    margin: 0;
    transition: all 0.5s ease;
    width: 100%;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    min-width: fit-content;
    white-space: nowrap;
}
.dropdown__item {
    padding: 1rem;
    cursor: pointer;
    white-space: nowrap;
    transition: all 0.5s ease;
}
.dropdown__item:hover {
    /* color: var(--white-color); */
    background-color: #ecfce5;
}

.nav__item:hover .dropdown {
    display: block;
    opacity: 1;
    z-index: 1;
    top: 100%;
}

/* Side bar */
.nav__links {
    display: flex;
    align-items: center;
    color: var(--black-color);
}
.sidebar__items {
    display: flex;
    gap: 1.5rem;
    flex-direction: column;
}
.sidebar__items li {
    list-style: none;
    padding: 0 2rem;
}
.sidebar__items li:first-child {
    margin-top: 2rem;
}
/* ... */

